// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispatch(redirect(action)): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/redirected",
    "search": "",
    "state": Object {},
    "url": "/redirected",
  },
]
`;

exports[`dispatch(redirect(action)): 1 - history_index 1`] = `0`;

exports[`dispatch(redirect(action)): 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`dispatch(redirect(action)): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(redirect(action)): 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`dispatch(redirect(action)): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected",
        "search": "",
        "state": Object {},
        "url": "/redirected",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
        ],
        "index": 0,
        "kind": "load",
        "length": 1,
        "pathname": "/first",
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "hash": "",
    "index": 0,
    "kind": "redirect",
    "length": 1,
    "params": Object {},
    "pathname": "/redirected",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`dispatch(redirect(action)): 1 - title 1`] = `"REDIRECTED"`;

exports[`dispatch(redirect(action, status)): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/redirected",
    "search": "",
    "state": Object {},
    "url": "/redirected",
  },
]
`;

exports[`dispatch(redirect(action, status)): 1 - history_index 1`] = `0`;

exports[`dispatch(redirect(action, status)): 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`dispatch(redirect(action, status)): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(redirect(action, status)): 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`dispatch(redirect(action, status)): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected",
        "search": "",
        "state": Object {},
        "url": "/redirected",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
        ],
        "index": 0,
        "kind": "load",
        "length": 1,
        "pathname": "/first",
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "hash": "",
    "index": 0,
    "kind": "redirect",
    "length": 1,
    "params": Object {},
    "pathname": "/redirected",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 301,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`dispatch(redirect(action, status)): 1 - title 1`] = `"REDIRECTED"`;

exports[`redirect within beforeEnter: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/redirected",
    "search": "",
    "state": Object {},
    "url": "/redirected",
  },
]
`;

exports[`redirect within beforeEnter: 1 - history_index 1`] = `1`;

exports[`redirect within beforeEnter: 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`redirect within beforeEnter: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`redirect within beforeEnter: 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`redirect within beforeEnter: 1 - routes - SECOND - beforeEnter 1`] = `1`;

exports[`redirect within beforeEnter: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected",
        "search": "",
        "state": Object {},
        "url": "/redirected",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "hash": "",
    "index": 1,
    "kind": "redirect",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`redirect within beforeEnter: 1 - title 1`] = `"REDIRECTED"`;

exports[`redirect within thunk: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/redirected",
    "search": "",
    "state": Object {},
    "url": "/redirected",
  },
]
`;

exports[`redirect within thunk: 1 - history_index 1`] = `1`;

exports[`redirect within thunk: 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`redirect within thunk: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`redirect within thunk: 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`redirect within thunk: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`redirect within thunk: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/redirected",
        "search": "",
        "state": Object {},
        "url": "/redirected",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "state": Object {},
            "url": "/first",
          },
          Object {
            "basename": "",
            "hash": "",
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "state": Object {},
            "url": "/second",
          },
        ],
        "index": 1,
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "hash": "",
    "index": 1,
    "kind": "redirect",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`redirect within thunk: 1 - title 1`] = `"REDIRECTED"`;
